export interface Identity {
  author_id: string;
  real_author_id: number;
}
